--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -4,5 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:colorForeground">?android:attr/colorForegroundInverse</item>
+        <item name="colorPrimary">@color/icon_background</item>
+        <item name="colorPrimaryDark">@color/oil</item>
     </style>
 </resources>
