--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
   <color name="icon_background">#2d4452</color>
   <color name="dark_background">#FF303030</color>
     <color name="light_red">#ff0000</color>
+    <color name="dark_background_trans">#d3303030</color>
+    <color name="checked_green">#46c128</color>
+    <color name="my_red">#dc1818</color>
 </resources>
