--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -17,7 +17,6 @@
        android:shape="rectangle"> 
     <gradient
         android:angle="90"
-        android:centerColor="#FF2D4452"
-        android:startColor="#000"
+        android:endColor="#FF2D4452"
         android:type="linear"/>
 </shape>
