--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/activity_home"
-                xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -35,7 +35,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -49,10 +49,10 @@
         android:translationZ="-5dp"
         android:weightSum="1">
 
-        <fragment android:id="@+id/home_map_view"
-                  android:name="com.google.android.gms.maps.SupportMapFragment"
-                  xmlns:android="http://schemas.android.com/apk/res/android"
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/home_map_view"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight=".5"
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="@android:color/transparent"
+        android:background="@drawable/gradient"
         android:orientation="horizontal"
         android:translationZ="-1dp"
         android:visibility="visible"
@@ -144,27 +144,29 @@
             android:id="@+id/btn_createRoom"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:clickable="true"
             android:visibility="visible"
             app:elevation="11dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/_add_room_100"/>
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/_add_room_100" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_home_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -211,18 +213,6 @@
 
 
     </android.support.constraint.ConstraintLayout>
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/gradient"
-        android:translationZ="-2dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="336dp">
-
-    </RelativeLayout>
 
 
 </RelativeLayout>
