--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,7 +4,7 @@
     <style name="Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:background">?android:attr/listDivider</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
@@ -13,9 +13,11 @@
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
-        <item name="android:colorForeground">?android:attr/colorForegroundInverse</item>
+        <item name="android:colorForeground">?attr/colorPrimaryDark</item>
         <item name="colorPrimary">@color/icon_background</item>
         <item name="colorPrimaryDark">@color/oil</item>
+        <item name="android:colorBackground">@color/black</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
